--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.3.13",
+  "version": "1.3.14",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
@@ -20,8 +20,8 @@
   },
   "sideEffects": false,
   "typings": "types/index.d.ts",
-  "main": "lib/index.mjs",
-  "module": "lib/index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.mjs",
   "style": "lib/style.css",
   "scripts": {
     "postinstall": "node ./scripts/postinstall.js",
@@ -65,15 +65,15 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "eslint-define-config": "^1.24.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "9.18.1",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "jest": "^26.6.3",
     "lint-staged": "^11.2.3",
-    "prettier": "^3.1.0",
     "postcss-html": "^1.5.0",
+    "prettier": "^3.1.0",
     "pretty-quick": "^3.1.1",
     "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.69.5",
@@ -86,9 +86,9 @@
     "vite": "4.5.0",
     "vite-plugin-dts": "3.6.3",
     "vue": "^3.3.8",
-    "vue-types": "^5.1.1",
     "vue-demi": "^0.14.6",
-    "vue-jest": "^5.0.0-alpha.10"
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue-types": "^5.1.1"
   },
   "peerDependencies": {
     "@vue/composition-api": "^1.1.0",
