--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "install2": "cd example/v2 && npm install",
     "switch2": "node bin/vue-switch.js 2 && vue-demi-switch 2",
     "switch3": "node bin/vue-switch.js 3 && vue-demi-switch 3",
-    "dev": "npm run switch3 && vite --config vite.demo.js",
+    "dev": "npm run switch3 && vite --config vite.demo.ts",
     "build": "npm run build3 && npm run build2",
     "build3": "npx vue-demi-switch 3 && vite build",
     "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
-    "dev2": " npm run switch2 && cd example/v2 && vite --config vite.demo.js",
-    "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.js",
-    "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.js",
+    "dev2": " npm run switch2 && cd example/v2 && vite --config vite.demo.ts",
+    "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.ts",
+    "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.ts",
     "precommit": "lint-staged",
     "clean": "npx rimraf node_modules",
     "clean:cache": "npx rimraf node_modules/.cache",
@@ -42,7 +42,7 @@
     "lint:format": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:style": "stylelint --fix \"./src/**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint:lint-staged": "lint-staged -c ",
-    "prepare": "husky install",
+    "prepare": "is-ci || husky install",
     "test": "jest"
   },
   "lint-staged": {
@@ -51,43 +51,42 @@
     "*.{vue,css,less}": "stylelint --fix"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/babel-plugin-jsx": "^1.1.1",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "babel-jest": "^27.3.1",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.11",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/babel-plugin-jsx": "^1.2.1",
+    "@vue/test-utils": "^2.4.4",
+    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-define-config": "^1.24.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-vue": "9.18.1",
-    "gh-pages": "^3.2.3",
-    "husky": "^7.0.4",
-    "jest": "^26.6.3",
-    "lint-staged": "^11.2.3",
-    "postcss-html": "^1.5.0",
-    "prettier": "^3.1.0",
-    "pretty-quick": "^3.1.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "9.21.0",
+    "gh-pages": "^6.1.1",
+    "husky": "^9.0.7",
+    "is-ci": "^3.0.1",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "postcss-html": "^1.6.0",
+    "prettier": "^3.2.4",
+    "pretty-quick": "^4.0.0",
     "rollup-plugin-banner": "^0.2.1",
-    "sass": "^1.69.5",
-    "stylelint": "^15.11.0",
+    "sass": "^1.70.0",
+    "stylelint": "^16.2.0",
     "stylelint-config-html": "^1.1.0",
-    "stylelint-config-recommended": "^13.0.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-order": "^6.0.3",
-    "typescript": "5.2.2",
-    "vite": "4.5.0",
-    "vite-plugin-dts": "3.6.3",
-    "vue": "^3.3.8",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-order": "^6.0.4",
+    "typescript": "5.3.3",
+    "vite": "5.0.12",
+    "vite-plugin-dts": "3.7.2",
+    "vue": "^3.4.15",
     "vue-demi": "^0.14.6",
-    "vue-jest": "^5.0.0-alpha.10",
+    "vue-jest": "^3.0.7",
     "vue-types": "^5.1.1"
   },
   "peerDependencies": {
