--- a/.github/workflows/gh-pages copy.yml
+++ b/.github/workflows/gh-pages copy.yml
@@ -12,24 +12,17 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
     steps:
-      - uses: actions/checkout@v3
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2
 
       - name: Install and Build 🔧
         run: |
-          bun i
-          bun run build:demo
+          yarn install
+          npm run build:demo
 
       - name: Deploy 🚀
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: dist # The folder the action should deploy.
-          workspace: '1x'
-          target-folder: '1x' # 放在1X目录下
+          github_token: ${{ secrets.PERSONAL_SECRET_TOKEN2 }}
+          publish_dir: ./dist
