--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "1.3.15",
+  "version": "1.4.1",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
@@ -12,11 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kakajun/vue3-sketch-ruler/tree/1x"
-  },
-  "bin": {
-    "vue-fix": "bin/vue-fix.js",
-    "vue-switch": "bin/vue-switch.js"
+    "url": "https://github.com/kakajun/vue3-sketch-ruler"
   },
   "sideEffects": false,
   "typings": "types/index.d.ts",
@@ -24,17 +20,8 @@
   "module": "lib/index.mjs",
   "style": "lib/style.css",
   "scripts": {
-    "postinstall": "node ./scripts/postinstall.js",
-    "install2": "cd example/v2 && npm install",
-    "switch2": "node bin/vue-switch.js 2 && vue-demi-switch 2",
-    "switch3": "node bin/vue-switch.js 3 && vue-demi-switch 3",
-    "dev": "npm run switch3 && vite --config vite.demo.ts",
-    "build": "npm run build3 && npm run build2",
-    "build3": "npx vue-demi-switch 3 && vite build",
-    "build2": "npx vue-demi-switch 2 && cd example/v2 && vite build",
-    "dev2": " npm run switch2 && cd example/v2 && vite --config vite.demo.ts",
-    "build:demo": "npx vue-demi-switch 3 && vite build --config vite.demo.ts",
-    "build:demo2": "npx vue-demi-switch 2 && cd example/v2 && vite build --config vite.demo.ts",
+    "dev": "vite --config vite.demo.ts",
+    "build": " vite build",
     "precommit": "lint-staged",
     "clean": "npx rimraf node_modules",
     "clean:cache": "npx rimraf node_modules/.cache",
@@ -42,7 +29,7 @@
     "lint:format": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:style": "stylelint --fix \"./src/**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "lint:lint-staged": "lint-staged -c ",
-    "prepare": "is-ci || husky install",
+    "prepare": "husky install",
     "test": "vitest"
   },
   "lint-staged": {
@@ -60,15 +47,13 @@
     "@vue/babel-plugin-jsx": "^1.2.2",
     "@vue/test-utils": "^2.4.6",
     "canvas": "^2.11.2",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.5.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "9.26.0",
     "gh-pages": "^6.1.1",
     "husky": "^9.0.11",
-    "is-ci": "^3.0.1",
     "jsdom": "^24.1.0",
     "lint-staged": "^15.2.7",
     "postcss-html": "^1.7.0",
