--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "dev": "vite --config vite.demo.ts",
     "build": " vite build",
+    "build:demo": "vite build --config vite.demo.js",
     "precommit": "lint-staged",
     "clean": "npx rimraf node_modules",
     "clean:cache": "npx rimraf node_modules/.cache",
