--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "vue3-sketch-ruler",
-  "version": "2.0.1-beta.3",
+  "version": "2.0.1-beta.4",
   "author": "kakajun <253495832@qq.com>",
   "license": "MIT",
   "private": false,
   "files": [
-    "lib",
-    "types"
+    "lib"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/kakajun/vue3-sketch-ruler"
   },
   "sideEffects": false,
-  "typings": "types/index.d.ts",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "style": "lib/style.css",
+    "types": "lib/index.d.ts",
   "scripts": {
     "dev": "vite --config vite.demo.ts",
     "build": " vite build",
@@ -42,40 +41,38 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-typescript": "^7.24.7",
-    "@types/node": "^20.14.10",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@types/node": "^20.14.11",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/babel-plugin-jsx": "^1.2.2",
     "@vue/test-utils": "^2.4.6",
-    "canvas": "^2.11.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "9.27.0",
     "gh-pages": "^6.1.1",
-    "husky": "^9.0.11",
+    "husky": "^9.1.1",
     "jsdom": "^24.1.0",
     "lint-staged": "^15.2.7",
     "postcss-html": "^1.7.0",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
     "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.77.8",
-    "stylelint": "^16.6.1",
+    "stylelint": "^16.7.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "happy-dom": "^14.12.3",
+
     "typescript": "5.5.3",
-    "vite": "5.3.3",
+    "vite": "5.3.4",
     "vite-plugin-dts": "3.9.1",
-    "vitest": "^2.0.2",
+    "vitest": "^2.0.3",
     "vue-tsc": "^2.0.26",
-    "vue": "^3.4.31",
-    "vue-types": "^5.1.3"
+    "vue": "^3.4.33"
   },
   "keywords": [
     "vue",
