--- a/.vscode/preview.yml
+++ b/.vscode/preview.yml
@@ -1,20 +1,10 @@
-# preview.yml
-name: Preview
-on:
-  push:
-    branches:
-      - master # 或者你的默认分支名
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20' # 或者你需要的 Node.js 版本
-      - name: Install dependencies
-        run: npm install
-      - name: Run development server
-        run: npm run dev
+# .vscode/preview.yml
+autoOpen: true # 打开工作空间时是否自动开启所有应用的预览
+apps:
+  - port: 6000 # 应用的端口
+    run: npm install && npm run dev # 应用的启动命令
+    root: ./ # 应用的启动目录
+    name: vue3-sketch-ruler # 应用名称
+    description: 适合作为低代码平台操作页面缩放工具,比如做图工具如, 大屏可视化, 做图工具图怪兽等,类似ps的缩放效果
+    autoOpen: true # 打开工作空间时是否自动开启预览（优先级高于根级 autoOpen）
+    autoPreview: true # 是否自动打开预览, 若无则默认为true
