--- a/package.json
+++ b/package.json
@@ -31,29 +31,31 @@
   },
   "devDependencies": {
     "simple-panzoom": "^1.0.8",
-    "@babel/preset-env": "^7.24.8",
+    "root-common": "workspace:*",
+    "vue3-sketch-ruler": "workspace:*",
+    "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
-    "@release-it/conventional-changelog": "^8.0.1",
-    "@types/node": "^20.14.11",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/babel-plugin-jsx": "^1.2.2",
+    "@release-it/conventional-changelog": "^8.0.2",
+    "@types/node": "^22.7.4",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/babel-plugin-jsx": "^1.2.5",
     "@vue/test-utils": "^2.4.6",
     "@element-plus/icons-vue": "^2.3.1",
     "canvas": "^2.11.2",
     "compare-func": "^2.0.0",
     "conventional-changelog": "^6.0.0",
     "conventional-changelog-cli": "^5.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "9.27.0",
+    "eslint-plugin-vue": "^9.28.0",
     "gh-pages": "^6.1.1",
-    "husky": "^9.1.1",
-    "jsdom": "^24.1.0",
-    "lint-staged": "^15.2.7",
+    "husky": "^9.1.6",
+    "jsdom": "^25.0.1",
+    "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
     "postcss-html": "^1.7.0",
     "prettier": "^3.3.3",
@@ -62,25 +64,26 @@
     "rollup-plugin-banner": "^0.2.1",
     "sass": "^1.79.3",
     "selecto": "^1.26.3",
-    "stylelint": "^16.7.0",
+    "stylelint": "^16.9.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "typescript": "5.5.3",
-    "vite": "5.3.4",
-    "vite-plugin-dts": "3.9.1",
-    "vitest": "^2.0.3",
-    "vue": "^3.4.33",
-    "vue-tsc": "^2.0.26",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
+    "vite-plugin-dts": "4.2.2",
+    "vitest": "^2.1.1",
+    "vue": "^3.5.10",
+    "vue-tsc": "^2.1.6",
     "vue3-moveable": "^0.28.0",
     "framework-utils": "^1.1.0",
     "@daybrush/utils": "^1.13.0",
-    "element-plus": "^2.3.8",
-    "vue-router": "^4.2.2",
-    "highlight.js": "^11.8.0",
-    "pinia": "^2.1.4",
-    "pinia-plugin-persistedstate": "^3.2.0"
+    "element-plus": "^2.8.4",
+    "vue-router": "^4.4.5",
+    "highlight.js": "^11.10.0",
+    "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^4.0.2",
+    "vue-i18n": "^9.2.2"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
